--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.247",
+    "gatsby": "^1.9.279",
     "gatsby-image": "^1.0.55",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-catch-links": "^1.0.22",
+    "gatsby-link": "^1.6.46",
+    "gatsby-plugin-catch-links": "^1.0.26",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-remark-copy-linked-files": "^1.5.37",
     "gatsby-remark-images": "^1.5.67",
-    "gatsby-source-filesystem": "^1.5.38",
-    "gatsby-transformer-remark": "^1.7.42",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-remark": "^1.7.44",
     "gatsby-transformer-sharp": "^1.6.27",
-    "react-helmet": "^5.2.0",
-    "react-media": "^1.8.0"
+    "npm-check-updates": "^7.0.1",
+    "react-helmet": "^5.2.1",
+    "react-media": "^1.10.0"
   },
   "keywords": [
     "gatsby"
@@ -29,7 +30,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.12.0"
+    "prettier": "^1.19.1"
   },
   "repository": {
     "type": "git",
