--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gatsby-transformer-remark": "^2.8.17",
     "gatsby-transformer-sharp": "^2.5.5",
     "npm-check-updates": "^7.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-media": "^1.10.0"
   },
