--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-image": "^2.4.7",
     "gatsby-link": "^2.4.6",
     "gatsby-plugin-catch-links": "^2.3.5",
+    "gatsby-plugin-layout": "^1.3.4",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sharp": "^2.6.12",
     "gatsby-remark-copy-linked-files": "^2.3.5",
